--- a/app/views/elections/show_nominations.html.erb
+++ b/app/views/elections/show_nominations.html.erb
@@ -23,10 +23,45 @@
       });
     }
   }
+  function get_election_dashboard() {
+	  $.ajax({
+        type: 'GET',
+        url: '/election_dashboard',
+        data: {},
+        cache: false,
+        success: function(result) {
+            $('#election_dashboard').html(result);
+        }
+    });
+	};
+  function goto_next_phase(election_id) {
+    $.ajax({
+      type: 'GET',
+      url: '/get_current_phase',
+      data: {'election_id':election_id
+      },
+      cache: false,
+      success: function(data) {
+        if (data.phase == "1") {
+          $.ajax({
+            type: 'POST',
+            url: '/goto_next_phase',
+            data: {'election_id':election_id
+            },
+            cache: false,
+            success: function() {
+              get_election_dashboard();
+      		  }
+          });
+		    }
+      }
+    });
+  }
   </script>
  
   <% if @current_user and @election_id != '' and @position_id != ''%>
   <p>Nomination for <%=@position_id%></p>
+  <p>You can only nominate once per position. Once you nominate a candidate for a position, you cannot change your selection once you have submitted.</p>
   <input id="election_selected_id" type="text" value="<%=@election_id%>" hidden>
   <input id="position_name_id" type="text" value="<%=@position_id%>" hidden>
   
@@ -42,5 +77,31 @@
   <% if @election_id == '' or @position_id == '' %>
   <p> You've reached this page in error</p>
   <% end %>
+  
+  <% if @current_user.admin_status == 2 and  %>
+  <p>Voting for <%=@position_id%></p>
+  <p>You can only vote once per position. Once you vote for candidate for a position, you cannot change your selection once you have submitted.</p>
+  <input id="election_selected_id" type="text" value="<%=@election_id%>" hidden>
+  <input id="position_name_id" type="text" value="<%=@position_id%>" hidden>
+  
+  <form id="vote_form_id"></form>
+    <% for @nom in @user_list %>
+      <div class="radio">
+        <label><input type="radio" name="nom" id="id_<%=@nom.user_email%>" value="<%=@nom.user_email%>"><%=@nom.user_name%> (<%=@nom.user_email%>)</label>
+      </div>
+    <% end %>
+    <button value="Submit" id="vote_form_submit_id" onclick="submit_vote('<%=@nom.user_email%>')">Submit</button>
+  </form>
+  <% end %>
+  <% if @current_user.is_super_admin? == true %>
+		<li><button type="button" onclick="goto_next_phase('<%=@election_id%>')"><i class="fa fa-gabel" aria-hidden="true"></i> Start nomination</button></li>
+	<% end %>
+  <% if @election_id == '' or @position_id == '' %>
+  <p> You've reached this page in error</p>
+  <% end %>
+  <br> <br>
+  <% if @current_user.is_admin_at_all? %>
+		<button type="button" onclick="goto_next_phase('<%=@election_id%>')"><i class="fa fa-gabel" aria-hidden="true"></i> Start voting</button>
+	<% end %>
   
 
