--- a/app/views/elections/show_vote.html.erb
+++ b/app/views/elections/show_vote.html.erb
@@ -1,3 +1,4 @@
+<script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/core-min.js"></script>
 <script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/aes.js"></script>
 <script src="https://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js"></script>
 <!-- left election panel -->
