--- a/app/views/elections/show_vote.html.erb
+++ b/app/views/elections/show_vote.html.erb
@@ -6,20 +6,22 @@
   function getCookie(name) {
     var value = "; " + document.cookie;
     var parts = value.split("; " + name + "=");
-    if (parts.length == 2) return parts.pop().split(";").shift();
-  }
-  function render_modal(user_email) {
-    var user_selected = $("input:radio[name='nom']:checked").val();
+    if (parts.length == 2) { return parts.pop().split(";").shift(); }
+  };
+  
+  function setCookie(name,value,expires){
+      document.cookie = name + "=" + value + ((expires==null) ? "" : ";expires=" + expires.toGMTString());
+  };
+  
+  function render_modal2(prime) {
     var election_id = $('#election_selected_id').val();
     var position_name_id = $('#position_name_id').val();
+    var user_email = $("#user_email").val()
     var is_cached;
     var current_user_votes = $('#curr_user_votes').val()
+    var user_prime = prime
     is_cached_password = getCookie("password");
-    
-    if(user_selected == null) {
-      alert('Vote for a candidate');
-    }
-    else if (is_cached_password != undefined){
+    if (is_cached_password != undefined){
       var encodeuri = btoa(is_cached_password)
       var key = CryptoJS.enc.Base64.parse(encodeuri.toString());
       var iv  = CryptoJS.enc.Base64.parse("EBESExQVFhcYGRobHB0eHw==");
@@ -33,32 +35,69 @@
         $.ajax({
           type: 'POST',
           url: '/encryption_save',
-          data: {'encrpyted_text' : encrypted,
-                 'user_email' : user_email,
-                 'election_id' : election_id
+          data: {'encrypted_text' : encrypted,
+                'user_email' : user_email,
+                'election_id' : election_id
           },
           cache: false,
           success: function(result) {
+            console.log("What hath this wrought?");
     		              $('#election_dashboard').html(result)
     		  }
         });
       }
     }
     else {
+      var input_val = $("#password_id").val();
+      var encodeuri = btoa(input_val);
+      var key = CryptoJS.enc.Base64.parse(encodeuri.toString());
+      var iv  = CryptoJS.enc.Base64.parse("EBESExQVFhcYGRobHB0eHw==");
+      var text = current_user_votes;
+      var step_text = CryptoJS.AES.decrypt(text, key, {iv: iv});
+      var decrypted_text = step_text.toString(CryptoJS.enc.Utf8);
+      decrypted_text = decrypted_text + "{" + election_id + "{" + position_name_id + " : " + user_prime + ","; // Need to do cleanup in the backend
+      // alert(decrypted_text)
+      var encrypted;
+      var encrypted = CryptoJS.AES.encrypt(decrypted_text, key, {iv : iv});
+      alert("this is encrypted: "+encrypted);
+      var decrypted = CryptoJS.AES.decrypt(encrypted, key, {iv: iv});
+      alert("This is the decrypted: "+decrypted.toString(CryptoJS.enc.Utf8));
+      console.log("ending decryption");
+      var expirydate=new Date();
+      expirydate.setTime(expirydate.getTime()+(100*60*60*24*100));
+      // setCookie("password", input_val, expirydate)
       $.ajax({
         type: 'POST',
-        url: '/show_modal',
-        data: {'user_email' : user_email,
-               'election_id' : election_id,
-               'user_selected' : user_selected,
-               'position_id' : position_name_id
+        url: '/encryption_save',
+        data: {'encrypted_text' : encrypted.toString(),
+              'election_id' : election_id,
+              'user_email' : user_email,
         },
         cache: false,
         success: function(result) {
-  		              $('#election_dashboard').html(result)
+          console.log("got to the encryption alert");
+                    alert("the value is "+result);
+  		              // $('#election_dashboard').html(result);
+  		  },
+  		  complete: function(result) {
+  		    
+  		    console.log("well then");
   		  }
       });
+      console.log("DO YOU EVEN RUN BRO");
     }
+  };
+  function render_modal(button_id) {
+  		var opt = {
+        autoOpen: false,
+        modal: true,
+        width: 300,
+        height:150,
+        title: 'Enter Password'
+  		};
+  		var theDialog = $("#confirmVoteModal").dialog(opt);
+  		theDialog.dialog("open");
+  		
   };
   function get_election_dashboard() {
 	  $.ajax({
@@ -95,27 +134,62 @@
     });
   }
   </script>
- 
-  <% if @current_user and @election_id != '' and @position_id != ''%>
-  <p>VOTING for <%=@position_id%></p>
-  <p>You can only vote once per position. Once you vote for candidate for a position, you cannot change your selection once you have submitted.</p>
-  <input id="election_selected_id" type="text" value="<%=@election_id%>" hidden>
-  <input id="position_name_id" type="text" value="<%=@position_id%>" hidden>
-  <input id="curr_user_votes" type="text" value="<%=@current_user_votes%>" hidden>
   
-  <form id="vote_form_id"></form>
-    <% for @nom in @user_list %>
-      <div class="radio">
-        <label><input type="radio" name="nom" id="id_<%=@nom.user_email%>" value="<%=@nom.user_email%>"><%=@nom.user_name%> (<%=@nom.user_email%>)</label>
-      </div>
+    <% if @current_user and @election_id != '' and @position_id != ''%>
+    <p>Voting for <%=@position_id%></p>
+    <p>You can only vote once per position. Once you vote for candidate for a position, you cannot change your selection after submitting.</p>
+    <input id="election_selected_id" type="text" value="<%=@election_id%>" hidden>
+    <input id="position_name_id" type="text" value="<%=@position_id%>" hidden>
+    <input id="curr_user_votes" type="text" value="<%=@current_user_votes%>" hidden>
+    <input id="user_email" type="text" value="<%=@current_user_email%>" hidden>
+    
+    <form id="vote_form_id"></form>
+      <% for @nom in @user_list %>
+        <div class="radio">
+          <label><input type="radio" name="nom" id="id_<%=@nom.user_email%>" value="<%=@nom.user_email%>"><%=@nom.user_name%> (<%=@nom.user_email%>)</label>
+        </div>
+      <% end %>
+      <button value="submit_button" id="vote_form_submit_id" onclick="render_modal('<%=@nom.user_email%>')">Vote!</button>
+      <input id="user_email" type="text" value="<%=@nom.user_email%>" hidden>
+    </form>
     <% end %>
-    <button value="submit_button" id="vote_form_submit_id" onclick="render_modal('<%=@nom.user_email%>')">Vote!</button>
-  </form>
-  <% end %>
+  
   <% if @election_id == '' or @position_id == '' %>
   <p> You've reached this page in error</p>
   <% end %>
   <br> <br>
+	<div id="confirmVoteModal" title="Confirm Vote" style="display:none">
+    <script>
+  	function set_vote_position() {
+  	  var user_selected = $("input:radio[name='nom']:checked").val();
+  	  if (user_selected == null){
+  	    alert("You need to select a user");
+  	  }
+  	  else{
+	      $.ajax({
+          type: 'POST',
+          url: '/get_user_prime',
+          data: {'user_email' : $("#user_email").val(),
+                'election_id' : $("#election_selected_id").val(),
+          },
+          cache: false,
+          success: function(result) {
+            render_modal2(result.prime);
+    		  }
+        });
+  	  }
+		};
+  	</script>
+    <!-- <form id="voteFrame_id"> -->
+	  	<input type='hidden' name='<%=request_forgery_protection_token.to_s%>' value='<%=form_authenticity_token%>'>
+	    <label>Password</label>
+	    <input id="password_id" name="password_value" type="password"><br>
+	    <button value="Submit" id="voteFrame_submit_id" onclick="set_vote_position()">Submit</button>
+	    <!-- <input id="voting_submit" type="submit" value="Submit">
+	   </form> -->
+	</div>
+
+  
   <% if @current_user.is_admin_at_all? %>
 		<button type="button" onclick="goto_next_phase('<%=@election_id%>')"><i class="fa fa-gabel" aria-hidden="true"></i> End voting</button>
 	<% end %>
